# Demineur

./: CMakeLists.txt  README.md  demineur.cc  demineur.hh  main.cc  mainwindow.cc  mainwindow.hh
about/: about_game_en.txt  about_game_fr.txt
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  demineur
build_linux/.qt/: QtDeploySupport.cmake
build_linux/demineur_autogen/EWIEGA46WW/: moc_demineur.cpp  moc_demineur.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
build_mac/: CMakeCache.txt  Makefile  cmake_install.cmake  demineur
build_mac/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_mac/demineur_autogen/: deps
build_mac/demineur_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
scores/: difficile.txt  facile.txt  moyen.txt
